--- a/pkg/arch/PKGBUILD
+++ b/pkg/arch/PKGBUILD
@@ -1,12 +1,12 @@
 # Maintainer: Otreblan <otreblain@gmail.com>
 
-pkgname=hello-git
-pkgver=v4.0.r34.ga8aa7b3
+pkgname=cce-git
+pkgver=r2.850ef4b
 pkgrel=1
 epoch=
-pkgdesc="A C++ template"
+pkgdesc="Compilador CEs"
 arch=('x86_64')
-url="https://github.com/otreblan/hello"
+url="https://github.com/otreblan/cce"
 license=('GPL3')
 groups=()
 depends=('gcc-libs')
