--- a/pkg/arch/PKGBUILD
+++ b/pkg/arch/PKGBUILD
@@ -10,7 +10,7 @@ url="https://github.com/otreblan/cce"
 license=('GPL3')
 groups=()
 depends=('gcc-libs')
-makedepends=('git' 'asciidoctor' 'cmake' 'bash-completion')
+makedepends=('git' 'asciidoctor' 'cmake' 'bash-completion' 'bison' 'flex')
 checkdepends=()
 optdepends=()
 provides=(${pkgname%-git})
