--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -18,6 +18,7 @@ target_sources(${PROJECT_NAME}
 	PRIVATE
 		# C
 		declaracion.c
+		lista_declaracion.c
 		programa.c
 		tipo.c
 		var_declaracion.c
