--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,28 +55,27 @@ set_target_properties(${PROJECT_NAME}
 		CXX_STANDARD 17
 )
 
-## Shared libraries
-#pkg_check_modules(shared
-#	REQUIRED IMPORTED_TARGET
-#		libfoo1
-#		libfoo2
-#)
-#
+# Shared libraries
+pkg_check_modules(shared
+	REQUIRED IMPORTED_TARGET
+		fmt
+)
+
 ## Header only libraries
 #pkg_check_modules(header_only
 #	REQUIRED IMPORTED_TARGET
 #		libfoo3
 #		libfoo4
 #)
-#
-## Linking
-#target_link_libraries(${PROJECT_NAME}
-#	PRIVATE
-#		PkgConfig::shared
-#
+
+# Linking
+target_link_libraries(${PROJECT_NAME}
+	PRIVATE
+		PkgConfig::shared
+
 #	INTERFACE
 #		PkgConfig::header_only
-#)
+)
 
 # Bash completion
 file(WRITE ${CMAKE_BINARY_DIR}/bash-completion/${PROJECT_NAME}
