--- a/pkg/arch/PKGBUILD
+++ b/pkg/arch/PKGBUILD
@@ -9,7 +9,7 @@ arch=('x86_64')
 url="https://github.com/otreblan/cce"
 license=('GPL3')
 groups=()
-depends=('gcc-libs' 'flex')
+depends=('gcc-libs' 'flex' 'fmt')
 makedepends=('git' 'asciidoctor' 'cmake' 'bash-completion' 'bison')
 checkdepends=()
 optdepends=()
