--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: ammaraskar/gcc-problem-matcher@master
 
     - name: deps
-      run: sudo apt install asciidoctor g++-10 bash-completion libfl-dev bison
+      run: sudo apt install asciidoctor g++-10 bash-completion libfl-dev bison libfmt-dev
 
     - name: configure
       run: cmake
