--- a/pkg/arch/PKGBUILD
+++ b/pkg/arch/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Otreblan <otreblain@gmail.com>
 
 pkgname=cce-git
-pkgver=r89.ff925c3
+pkgver=0.0.0.r107.g5ffd55a
 pkgrel=1
 epoch=
 pkgdesc="Compilador CEs"
