--- a/pkg/arch/PKGBUILD
+++ b/pkg/arch/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Otreblan <otreblain@gmail.com>
 
 pkgname=cce-git
-pkgver=0.0.0.r111.gf75bbb8
+pkgver=1.1.0.r0.g6267278
 pkgrel=1
 epoch=
 pkgdesc="Compilador CEs"
